--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
+    "jpegtran-bin": "0.1.0",
+    "optipng-bin": "~0.3.0",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.1",
